--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,6 +135,17 @@ jobs:
              else
                 echo 'Skipping upload distribution because build is not for release'
              fi
+  electron-linux-arm64-test:
+    machine: true
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - run:
+          name: Test in ARM64 docker container
+          command: |
+            docker run -it \
+            --mount type=bind,source=/tmp/workspace,target=/tmp/workspace \
+            --rm electronbuilds/electronarm64:0.0.1
   electron-linux-ia32:
     docker:
       - image: electronbuilds/electron:0.0.4
@@ -143,6 +154,9 @@ jobs:
     resource_class: xlarge
     steps:
       - checkout
+      - run:
+          name: Setup for headless testing
+          command: sh -e /etc/init.d/xvfb start
       - run:
           name: Check for release
           command: |
@@ -191,6 +205,29 @@ jobs:
                 script/upload.py --upload_to_s3
              else
                 echo 'Skipping upload distribution because build is not for release'
+             fi
+      - run:
+          name: Test
+          environment:
+            MOCHA_FILE: junit/test-results.xml
+            MOCHA_REPORTER: mocha-junit-reporter
+          command: |
+             if [ "$ELECTRON_RELEASE" != "1" ]; then
+                echo 'Testing Electron debug build'
+                out/D/electron --version
+                mkdir junit
+                script/test.py --ci --rebuild_native_modules
+             else
+                echo 'Skipping testing on release build'
+             fi
+      - run:
+          name: Verify FFmpeg
+          command: |
+             if [ "$ELECTRON_RELEASE" != "1" ]; then
+                echo 'Verifying ffmpeg on debug build'
+                script/verify-ffmpeg.py
+             else
+                echo 'Skipping verify ffmpeg on release build'
              fi
   electron-linux-mips64el:
     docker:
@@ -353,13 +390,13 @@ workflows:
       - electron-linux-arm-test:
           requires:
             - electron-linux-arm
-
-  # build-arm64:
-  #  jobs:
-  #    - electron-linux-arm64
-  # build-ia32:
-  #  jobs:
-  #    - electron-linux-ia32
+  build-arm64:
+    jobs:
+      - electron-linux-arm64
+      - electron-linux-arm64-test
+  build-ia32:
+    jobs:
+      - electron-linux-ia32
   # build-x64:
   #  jobs:
   #    - electron-linux-x64
